# pydev_v3_coursework_2

./: .gitignore  README.md  file_processor.py  file_processors.py  main.py  pyproject.toml  utils.py  vacancy.py
base_classes/: file_interface_base_class.py  parser_base_class.py
file_processors/: all_vacancies_file_processor.py  file_interface_abc_class.py  file_processor_base_class.py  headhunter_file_processor.py  headhunter_file_processors.py  json_mapper.py  superjob_file_processor.py
parsers/: headhunter_parser.py  parser_abc_class.py  superjob_parser.py
vacancies/: all_vacancies.py  headhunter_vacancy.py  superjob_vacancy.py  vacancy_base_class.py
