[tool.poetry]
name = "pydev-v3-coursework-2"
version = "0.1.0"
description = ""
authors = ["Kirill Tuchkin <volkirtu@gmail.com>"]
readme = "README.md"
packages = [{include = "pydev_v3_coursework_2"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.30.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
